Added Seed Ball, Seed Ball Crafting recipe, and seed ball eating

--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.blockcreatures.seed_ball": "Seed Ball"
+  "item.blockcreatures.seed_ball": "Seed Ball",
+
+  "creativemodtab.blockcreatures_tab": "Blockcreatures"
 }
