added roasted sunflower and roasted pumpkin seeds

--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.blockcreatures.seed_ball": "Seed Ball",
+  "item.blockcreatures.roasted_sunflower_seeds": "Roasted Sunflower Seeds",
+  "item.blockcreatures.roasted_pumpkin_seeds": "Roasted Pumpkin Seeds",
 
   "creativemodtab.blockcreatures_tab": "Blockcreatures"
 }
