Added Wood Pulp Block

--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.blockcreatures.seed_ball": "Seed Ball",
   "item.blockcreatures.roasted_sunflower_seeds": "Roasted Sunflower Seeds",
   "item.blockcreatures.roasted_pumpkin_seeds": "Roasted Pumpkin Seeds",
+  "block.blockcreatures.wood_pulp": "Wood Pulp",
 
-  "creativemodtab.blockcreatures_tab": "Blockcreatures"
+  "creativemodetab.blockcreatures_tab": "Blockcreatures"
 }
