Added Tangled Rose Bush and Blue Pot

--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -14,6 +14,7 @@
   "block.blockcreatures.tropical_sawdust_block": "Tropical Sawdust Block",
   "block.blockcreatures.tangled_rose_bush_block": "Tangled Rose Bush Block",
   "block.blockcreatures.tangled_rose_bush": "Tangled Rose Bush",
+  "block.blockcreatures.bluepot": "Blue Pot",
 
   "creativemodetab.blockcreatures_tab": "Blockcreatures"
 }
