--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -15,6 +15,8 @@
   "block.blockcreatures.tangled_rose_bush_block": "Tangled Rose Bush Block",
   "block.blockcreatures.tangled_rose_bush": "Tangled Rose Bush",
   "block.blockcreatures.bluepot": "Blue Pot",
+  "block.blockcreatures.redpot": "Red Pot",
+  "block.blockcreatures.yellowpot": "Yellow Pot",
 
   "creativemodetab.blockcreatures_tab": "Blockcreatures"
 }
