--- a/src/main/resources/assets/blockcreatures/lang/en_us.json
+++ b/src/main/resources/assets/blockcreatures/lang/en_us.json
@@ -31,6 +31,17 @@
   "block.blockcreatures.red_sandstone_statue": "Red Sandstone Statue",
   "block.blockcreatures.shellite_block": "Block of Shellite",
   "block.blockcreatures.cut_shellite": "Cut Shellite",
+  "block.blockcreatures.cut_shellite_slab": "Cut Shellite Slab",
+  "block.blockcreatures.cut_shellite_stairs": "Cut Shellite Stairs",
+  "block.blockcreatures.chiseled_shellite": "Chiseled Shellite",
+  "block.blockcreatures.cut_gold": "Cut Gold",
+  "block.blockcreatures.cut_gold_slab": "Cut Gold Slab",
+  "block.blockcreatures.cut_gold_stairs": "Cut Gold Stairs",
+  "block.blockcreatures.chiseled_gold": "Chiseled Gold",
+  "block.blockcreatures.cut_iron": "Cut Iron",
+  "block.blockcreatures.cut_iron_stairs": "Cut Iron Stairs",
+  "block.blockcreatures.cut_iron_slab": "Cut Iron Slab",
+  "block.blockcreatures.chiseled_iron": "Chiseled Iron",
 
   "item.blockcreatures.stone_block_spawn_egg": "Stone Block Spawn Egg",
   "item.blockcreatures.grass_block_spawn_egg": "Grass Block Spawn Egg",
